--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
 	"name": "portfolio",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://wasim919.github.io/MySpace/",
 	"dependencies": {
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
 		"@testing-library/jest-dom": "^5.11.9",
 		"@testing-library/react": "^11.2.3",
 		"@testing-library/user-event": "^12.6.2",
+		"gh-pages": "^3.1.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.1",
