--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.1",
+		"react-spring": "^8.0.27",
+		"typewriter-effect": "^2.17.0",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
