--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "portfolio",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://wasim919.github.io/MySpace/",
+	"homepage": "https://wasim919.github.io/",
 	"dependencies": {
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
